# HSharpVE_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.py
contrib/: CMakeLists.txt
data/: example.ini
include/: version.hpp  visitors.hpp
include/arena_alloc/: arena.hpp
include/logger/: logger.hpp
include/main/: arguments_handler.hpp  file.hpp  string_split.h
include/parser/: nodes.hpp  parser.hpp  tokenizer.hpp  tokens.hpp
include/ve/: exceptions.hpp  ve.hpp
scripts/: build.py
src/: CMakeLists.txt
src/main/: arguments_handler.cpp  file.cpp  main.cpp  string_split.cpp
src/parser/: helpers.cpp  parser.cpp  tokenizer.cpp
src/ve/: exceptions.cpp  stdlib.cpp  ve_main.cpp
test/: tests_parser.cpp  tests_tokenizer.cpp
test/include/: tests.hpp
tests/: CMakeLists.txt  tests_parser.cpp  tests_tokenizer.cpp
